1、多进程通信，线程开启方法补充； 2、SynchronizedMap和ConcurrentHashMap区别

--- a/DOC/Android/网络协议.md
+++ b/DOC/Android/网络协议.md
@@ -72,7 +72,7 @@
     503 Service Unavailable：表示服务器当前不能够处理客户端的请求，在一段时间之后，服务器可能会恢复正常。
 
 九、get和post的区别？
-  GET：当客户端要从服务器中读取某个资源时使用GET；一般用于获取/查询资源信息；GET参数通过URL传递，传递的参数是有长度限制，不能用来传递敏感信息
+  GET：当客户端要从服务器中读取某个资源时使用GET；一般用于获取/查询资源信息；GET参数通过URL传递，传递的参数是有长度限制(最多只能是1024字节)，不能用来传递敏感信息，
   POST：当客户端给服务器提供信息较多时可以使用POST；POST会附带用户数据，一般用于更新资源信息；
         POST将请求参数封装在HTTP 请求数据中，可以传输大量数据，传参方式比GET更安全。
 
