1、Activity启动流程、任务列表显示多个Activity； 2、viewpager2、ConstraintLayout、AndroidX、Android Jetpack、RecyclerView缓存机制 3、MVP模式、Glide原理、单例模式实现方式、HTTPS、内部类加final 4、悲观锁、乐观锁，公平锁、非公平锁

--- a/DOC/Android/网络协议.md
+++ b/DOC/Android/网络协议.md
@@ -4,15 +4,23 @@
        ②HttpUrlConnection：对网络请求没有HttpClient封装彻底，Android2.2之前存在bug，所以2.2之前用HttpClient，之后用容易优化的HttpUrlConnection，
        开源框架，封装了请求头、参数、内容体、响应在I/O流，接口中统一封成了HttpGet/HttpPost，减少了操作的繁琐性，访问速度快。
 
-二、Https是以安全为目标的Http通道，简单讲就是Http的安全版，即Http下加入SSL层，安全基础是SSL，加密的详细内容是SSL，主要原理利用了非对称加密算法。
+二、Https是以安全为目标的Http通道，简单讲就是Http的安全版，即Http下加入SSL层，安全基础是SSL，加密的详细内容是SSL，主要原理利用了非对称加密算法+对称加密算法。
    作用：建立一个信息安全通道，来保证数据传输的安全、确认网站的安全性。
 
-三、TCP：是网络层，滑动窗口协议，拥塞控制，可靠连接借助socket长连接，需要3次握手，第四次取消连接，画面优先。
+三、TCP：是网络层，滑动窗口协议，拥塞控制，可靠连接(通过序列号确认)，借助socket长连接，需要3次握手，第四次取消连接，画面优先。
         应用层：主要提供数据和服务。比如HTTP，FTP，DNS等
         传输层：负责数据的组装，分块。比如TCP，UDP等
         网络层：负责告诉通信的目的地，比如IP等
         数据链路层：负责连接网络的硬件部分，比如以太网，WIFI等
     UDP：不关心数据是否到达，是否阻塞，不可靠连接，流畅优先。
+
+    特性	      |   【TCP】	              |   【UDP】
+    面向连接	      |   面向连接	              |   无连接
+    可靠性	      |   可靠，有拥塞控制和ack	  |   不可靠，没有拥塞控制和ack
+    连接对象个数	  |   单播	                  |   单播，多播，光播
+    传输方式	      |   字节流	                  |   报文
+    头部开销	      |   20个字节	              |   8个字节
+    适用场景	      |   可靠性要求高，如文件传输	  |   实时性要求高，可靠性要求不高，如视频电话
 
 四、网络框架
    1、Volley：适合处理数据量小，通信频繁的网络操作，内部封装了异步操作，可直接在线程执行并处理结果，同时可以取消，
@@ -26,16 +34,16 @@
   3、RxJava + Retrofit3 + OkHttp3
    ①RxJava 主要用来实现线程切换，我们制定订阅在哪一个线程，观察在哪个线程，通过操作符进行数据变换，整个过程是键式的，简化逻辑。
    ②Retrofit 是网络请求的一个架子，用它设置一些参数和请求Url。
-   ③OkHttp是网络请求的内核，实际的网络请求是它发出来的。
+   ③OkHttp 是网络请求的内核，实际的网络请求是它发出来的,基于HttpURLConnection。
 
 五、三次握手和四次挥手（socket底层实现原理）
-   三次握手，是指建立一个TCP连接时，需要客户端和服务器总共发送3个包。三次握手的目的是连接服务器指定端口，建立TCP连接,并同步连接双方的序列号和确认号并交换TCP窗口大小信息。
+   【三次握手】，是指建立一个TCP连接时，需要客户端和服务器总共发送3个包。三次握手的目的是连接服务器指定端口，建立TCP连接,并同步连接双方的序列号和确认号并交换TCP窗口大小信息。
    SYN（synchronous）是同步标志；ACK (Acknowledgement）是确认标志，seq是序列号
       第一次握手：客户端发送一个TCP的SYN标志位置1的包，指明客户打算连接的服务器的端口，以及初始序号X,保存在包头的序列号字段里。
       第二次握手：服务器发回确认包(ACK)应答。即SYN标志位和ACK标志位均为1同时，将确认序号设置为客户的序列号加1以，即X+1。
       第三次握手：客户端再次发送确认包(ACK) SYN标志位为0，ACK标志位为1。并且把服务器发来ACK的序号字段+1，放在确定字段中发送给对方.并且在数据段放写序列号的+1。
 
-   四次挥手（Four-Way Wavehand）即终止TCP连接，就是指断开一个TCP连接时，需要客户端和服务端总共发送4个包以确认连接的断开
+   【四次挥手】（Four-Way Wavehand）即终止TCP连接，就是指断开一个TCP连接时，需要客户端和服务端总共发送4个包以确认连接的断开
       （1）第一次挥手：Client发送一个FIN，用来关闭Client到Server的数据传送，Client进入FIN_WAIT_1状态。
       （2）第二次挥手：Server收到FIN后，发送一个ACK给Client，确认序号为收到序号+1（与SYN相同，一个FIN占用一个序号），Server进入CLOSE_WAIT状态。
       （3）第三次挥手：Server发送一个FIN，用来关闭Server到Client的数据传送，Server进入LAST_ACK态。
@@ -48,6 +56,7 @@
     序列号和确认号。比如连接的一方发送一段80byte数据，会带上一个序列号，比如101。接收方收到数据，回复确认号181（180+1），这样下一次发送消息就会从181开始发送了。
     所以握手过程中，比如A发送syn信号给B，初始序列号为120，那么B收到消息，回复ack消息，序列号为120+1。同时B发送syn信号给A，初始序列号为256，如果收不到A的回复消息，就会重发，否则丢失这个序列号，就无法正常完成后面的通信了。
     这就是三次握手的原因。
+    为什么不是四次呢? 三次握手已经能确保通信双方都是可以正常收发，并能正确确认双方的序列号的。那么就没必要进行第四次握手来浪费资源了。
 
 六、播放视频用TCP还是UDP？为什么？
     播放视频适合用UDP。UDP适用于对网络通讯质量要求不高、要求网络通讯速度能尽量快的实时性应用；而TCP适用于对网络通讯质量有要求的可靠性应用。而且视频区分关键帧和普通帧，虽然UDP会丢帧但如果只是丢普通帧损失并不大，取而代之的是高速率和实时性。
@@ -82,7 +91,51 @@
 
 十一、HTTP和HTTPS的区别
   HTTP（超文本传输协议）：运行在TCP之上；传输的内容是明文；端口是80
-  HTTPS（安全为目标的HTTP）：运行在SSL/TLS之上，SSL/TLS运行在TCP之上；传输的内容经过加密；端口是443
+  HTTPS（安全为目标的HTTP，也不是绝对安全）：运行在SSL/TLS之上，SSL/TLS运行在TCP之上；传输的内容经过加密；端口是443
+       Http报文在组装好给到TCP之前，先经过TLS加密。接收方TCP在接收到数据后，在将数据返回上层HTTP之前，先将数据进行TLS解密。
+
+  【参考文章：https://www.jianshu.com/p/763722246143】
+  HTTPS 为了兼顾安全与效率，同时使用了对称加密和非对称加密。数据是被对称加密传输的，对称加密过程需要客户端的一个密钥，
+  为了确保能把该密钥安全传输到服务器端，采用非对称加密对该密钥进行加密传输，总的来说，对数据进行对称加密，对称加密所要使用的密钥通过非对称加密传输。
+  1、【对称加密】比较简单，客户端和服务器共用同一个密钥，该密钥可以用于加密一段内容，同时也可以用于解密这段内容。
+     对称加密的优点是加解密效率高，但是在安全性方面可能存在一些问题，因为密钥存放在客户端有被窃取的风险。对称加密的代表算法有：AES、DES 等。
+  2、【非对称加密】则要复杂一点，它将密钥分成了两种：公钥和私钥。公钥通常存放在客户端，私钥通常存放在服务器。
+     使用公钥加密的数据只有用私钥才能解密，反过来使用私钥加密的数据也只有用公钥才能解密。非对称加密的优点是安全性更高，因为客户端发送给服务器的加密信息只有用服务器的私钥才能解密，
+     因此不用担心被别人破解，但缺点是加解密的效率相比于对称加密要差很多。非对称加密的代表算法有：RSA、ElGamal 等。
+  3、【CA认证】电子认证是指为电子签名相关各方提供真实性、可靠性验证的活动，即使未在浏览器上安装Server端证书，也能正确发送Https，因为请求证书在建立连接的过程中通过网络传输
+  4、【OSI】即open system interconnect（开放网络互联模型），是由ISO（国际标准化组织）研究的网络互联模型，为的是规范网络中的模型、推动互联网普及。
+    OSI七层模型将网络从最底层的物理传输介质到最上层的应用，划分为7层，按照层级由下到上的关系分别为：
+    物理层：最底层，包括物理联网媒介，如电缆连线连接器。(IEEE802.2)
+    数据链路层：提供介质访问和链路管理。(ARP、PPP)
+    网络层：IP地址及路由选择。(IP、ICMP、RIP、OSPF)
+    传输层：建立、管理、维护端到端的连接。（TCP、UDP）
+    会话层：建立、管理和维护会话。
+    表示层：数据格式转化、数据加密。
+    应用层：为应用层序提供服务。(HTTP、HTTPS、FTP、Telent、SSH、SMTP、POP3)
+
+    【Https是如何做到安全的？https://www.jianshu.com/p/38ceb00950af】
+    1. Https的请求流程是怎么样的？
+    ①客户端发送支持的加密套件和随机数
+    ②服务端发送支持的加密套件和随机数
+    ③服务端发送证书给客户端，同时选取合适的加密套件，然后通知客户端首次握手结束
+    ④客户端验证服务端的证书后得到公钥，同时利用上面的随机数生成唯一密钥，然后将唯一密钥用公钥加密后发送给服务端，并通知改变加密方式
+    ⑤服务端利用上面的随机数生成密钥，然后比较解密后的密钥和当前密钥，从而确定握手的合法性。之后通知客户端改变加密方式。
+    ⑥安全连接建立，数据传输。
+
+    2. Https 是如何保证安全性的？
+    Https 引入了CA，保证了能得到合法的公钥，可以有效的防止篡改，防止监听、防止伪造。
+
+    3. 既然Https是安全的，是不是就不会被抓包了呢？
+    Https只是保证了被抓取的数据包是加密的，但是并不能保证不被抓包
+
+    4. 有没有办法抓取并解析Https 加密数据包呢？
+    通过将浏览器协商的密钥保存到外置文件中，用抓包工具如wireshark配合这个外置的文件就可以捕获到当前加密的数据包。
+
+    5. CA证书干啥用的？
+    CA证书防止中间人攻击，可以保证客户端得到服务端正确的公钥。
+
+    6. 既然有了Https 那我们接口还要做额外的安全处理吗？
+    当然需要了，Https是作用于协议层面的，一般加解密的工作都是web容器来做的，而接口的加解密取决于具体的业务逻辑。就好比办公室的大门上了锁，个人的抽屉难道就不需要上锁了吗。
 
 十二、HTTP和Socket的区别
   HTTP是应用层协议；基于TCP协议；使用“请求—响应”方式建立连接，在请求时需要先建立连接且客户端要先发出请求，
