知识点补充

--- a/DOC/Android/网络协议.md
+++ b/DOC/Android/网络协议.md
@@ -32,7 +32,10 @@
    【总结】：在项目实际运用中，视情况选择网络请求方式，也可以Volley+OkHttp搭配使用。异步回调用Volley，网络请求底层用OkHttp
 
   3、RxJava + Retrofit3 + OkHttp3
-   ①RxJava 主要用来实现线程切换，我们制定订阅在哪一个线程，观察在哪个线程，通过操作符进行数据变换，整个过程是键式的，简化逻辑。
+   ①RxJava 主要用来实现线程切换，我们制定订阅在哪一个线程，观察在哪个线程，通过操作符进行数据变换，整个过程是链式的，简化逻辑。
+        RxJava基于事件流的链式调用、使用观察者模式：
+        被观察者（Observable）通过订阅（Subscribe）按顺序发送事件 给观察者（Observer）
+        观察者（Observer）按顺序接收事件 & 作出对应的响应动作
    ②Retrofit 是网络请求的一个架子，用它设置一些参数和请求Url。
    ③OkHttp 是网络请求的内核，实际的网络请求是它发出来的,基于HttpURLConnection。
 
